--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,14 +1,4 @@
-img {
-    width: 200px;
-    height: 60px;
-}
-
-li {
-    padding: 10px;
-    margin-left: 7px;
-}
-
-li:hover, .active {
-    border-bottom: 3px solid rgba(255, 174, 0, 0.829);
-    margin-left: 7px;
+.logo {
+    width: 12rem;
+    height: 5rem;
 }
